# alignviz-anywidget

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  techov.md  usage.md
.github/workflows/: publish-testpypi.yml  publish.yml
js/: package-lock.json  package.json
js/src/: index.js
marimo/: static-example.py  usage-example.py
scripts/: smoke_widget.py
src/alignviz_anywidget/: __init__.py  widget.py
src/alignviz_anywidget/static/: index.js
