[build-system]
requires = ["hatchling>=1.25.0", "hatch-jupyter-builder>=0.9.1"]
build-backend = "hatchling.build"

[project]
name = "alignviz-anywidget"
version = "0.1.0"
description = "An anywidget for alignment visualization in marimo notebooks"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "GPL 3" }
authors = [{ name = "Neel Smith" }]
dependencies = [
  "anywidget>=0.9.13",
  "markdown>=3.6",
  "traitlets>=5.14.3",
]

[project.optional-dependencies]
dev = [
  "marimo>=0.12.0",
  "pytest>=8.3.0",
  "jupyterlab>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/alignviz_anywidget"]

[tool.hatch.build.targets.wheel.shared-data]
"src/alignviz_anywidget/static" = "share/jupyter/nbextensions/alignviz_anywidget"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/js",
  "/marimo",
  "/scripts",
  "/README.md",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
  "src/alignviz_anywidget/static/index.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "js"
build_cmd = "build"
npm = ["npm"]
